[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reginafield"
version = "1.0.0"
description = "Toolkit for analyzing, scoring, and visualizing structural features of the Regina Field prime distribution model."
readme = "README.md"
authors = [
  { name="Michael X. Middlebrooks", email="middlebrookstech@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.9"

dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
    "matplotlib>=3.4",
    "mpmath>=1.2",
]

[project.urls]
Homepage = "https://osf.io/<your-url>"
Repository = "https://github.com/<your-repo>"
Documentation = "https://<future-docsite-url>"

[project.scripts]
reginafield-cli = "reginafield.cli:main"   # This wires CLI into `pip install`
