[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reginafield"
version = "1.0.0"
description = "Toolkit for analyzing, scoring, and visualizing structural features of the Regina Field prime distribution model."
readme = "README.md"
authors = [
  { name="Michael X. Middlebrooks", email="middlebrookstech@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.9"

dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
    "matplotlib>=3.4",
    "mpmath>=1.2",
]

[project.urls]
Homepage = "https://osf.io/8hq9b"
Repository = "https://github.com/mmbrooks114/Regina-Field-Toolkit"
Documentation = "https://mmbrooks114.github.io/Regina-Field-Toolkit"

[project.scripts]
reginafield-cli = "reginafield.cli:main"   # This wires CLI into `pip install`
